WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210506
[Async overflow scroll] Backgrounds missing on gmail sometimes
https://bugs.webkit.org/show_bug.cgi?id=210506
Summary
[Async overflow scroll] Backgrounds missing on gmail sometimes
Simon Fraser (smfr)
Reported
2020-04-14 11:26:57 PDT
Created
attachment 396443
[details]
Reduction Element backgrounds fail to paint sometimes when scrolling in gmail with async overflow scrolling enabled.
Attachments
Reduction
(1.11 KB, text/html)
2020-04-14 11:26 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(9.45 KB, patch)
2020-04-14 16:48 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(15.57 KB, patch)
2020-04-14 20:48 PDT
,
Simon Fraser (smfr)
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-04-14 11:27:13 PDT
rdar://problem/60523869
Simon Fraser (smfr)
Comment 2
2020-04-14 11:58:45 PDT
I think this is about painting with stale clip rects (which are probably computed using some stale main-thread scrolling offset).
Simon Fraser (smfr)
Comment 3
2020-04-14 14:04:45 PDT
We paint out-of-view tiles but RenderBlock::paint() short-circuits because they are clipped out (note the iOS #ifdef), then we later scroll those tiles back into view and they are missing content.
Simon Fraser (smfr)
Comment 4
2020-04-14 15:42:40 PDT
RenderBox::overflowRectForPaintRejection() is supposed to handle this, but m_overflow is null for some reason.
Simon Fraser (smfr)
Comment 5
2020-04-14 16:48:55 PDT
Created
attachment 396478
[details]
Patch
Simon Fraser (smfr)
Comment 6
2020-04-14 20:48:37 PDT
Created
attachment 396494
[details]
Patch
Simon Fraser (smfr)
Comment 7
2020-04-14 23:35:28 PDT
https://trac.webkit.org/changeset/260118/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug