[Async overflow scroll] Backgrounds missing on gmail sometimes https://bugs.webkit.org/show_bug.cgi?id=210506 <rdar://problem/60523869>

Reviewed by Zalan Bujtas.
Source/WebCore:

When painting the scrolled contents layers of accelerated overflow:scroll, RenderBlock::paint()
needs to not short-circuit when the dirty rect is outside a clipping rect, because accelerated
overflow involves overdraw for tiles outside the visible area.

There were two code paths that made this mostly work: overflowRectForPaintRejection() tested for
usesCompositedScrolling(), and the #if PLATFORM(IOS_FAMILY) made it work on iOS.

For content involving flexbox, overflowRectForPaintRejection() gave the wrong answer because
flex layout would sometimes clear m_overflow, even on an overflow:scroll element.

So remove overflowRectForPaintRejection(), and instead revert to the simple visualOverflowRect(),
but first check a bit that's passed down from compositing code that indicates that
we're painting the contents of composited scroll

Test: compositing/scrolling/async-overflow-scrolling/mac/overflow-in-flex-empty-tiles.html

* rendering/PaintPhase.h:
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paint):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::overflowRectForPaintRejection const): Deleted.
* rendering/RenderBox.h:
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):
(WebCore::RenderLayer::paintForegroundForFragments):

LayoutTests:

Test with a scroller inside a flexbox; programmatically scrolls the scroller to the bottom,
then mouseWheels up to reveal new tiles.

* TestExpectations:
* compositing/scrolling/async-overflow-scrolling/mac/overflow-in-flex-empty-tiles-expected.html: Added.
* compositing/scrolling/async-overflow-scrolling/mac/overflow-in-flex-empty-tiles.html: Added.
* platform/mac/TestExpectations: Test is macOS-only because it uses wheel events.

Canonical link: https://commits.webkit.org/223411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260118 268f45cc-cd09-0410-ab3c-d52691b4dbfc